All of the HTML content created thus far. Includes content from work in class and content from work at home.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8">
-
-    <title></title>
+  <meta charset="utf-8">
+  <title>JS Bin</title>
+  <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
 </head>
 <body>
+  <nav>
+    <h1 id="logo">
+      <span>J</span>
+      Hacker News
+    </h1>
+    <ul class="nav-items">
+      <li>
+        <a href="#">new</a>
+      </li>
+      <li>
+        <a href="#">comments</a>
+      </li>
+      <li>
+        <a href="#">show</a>
+      </li>
+      <li>
+        <a href="#">ask</a>
+      </li>
+      <li>
+        <a href="#">jobs</a>
+      </li>
+      <li>
+        <a href="#">submit</a>
+      </li>
+    </ul>
+  </nav>
 
+    <ol class="content">
+      <li>First Item</li>
+      <li>Second Item</li>
+      <li>Third Item</li>
+    </ol>
 </body>
 </html>
