Minimal change to title - from Hacker News to Iron News.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <nav>
     <h1 id="logo">
-      <span>J</span>
-      Hacker News
+      <span>I</span>
+      Iron News
     </h1>
     <ul class="nav-items">
       <li>
