Added entries for Iron News (lorem ipsum). Also added the links at the bottom and the search bar.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,68 @@
   </nav>
 
     <ol class="content">
-      <li>First Item</li>
-      <li>Second Item</li>
-      <li>Third Item</li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
+      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
+      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
+      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
+      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
+      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
+      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
+      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
+      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
+      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
     </ol>
+  <p class="nav-end">
+    <ul class="nav-end-2">
+      <li>
+        <a href="#">Guidelines</a>
+      </li>
+      <li>
+        <a href="#">FAQ</a>
+      </li>
+      <li>
+        <a href="#">Support</a>
+      </li>
+      <li>
+        <a href="#">Lists</a>
+      </li>
+      <li>
+        <a href="#">Bookmarklet</a>
+      </li>
+      <li>
+        <a href="#">DMCA</a>
+      </li>
+      <li>
+        <a href="#">Y-Combinator</a>
+      </li>
+      <li>
+        <a href="#">Apply</a>
+      </li>
+      <li>
+        <a href="#">Contact</a>
+      </li>
+    </ul>
+  <form>
+                                Search: <input type="text" placeholder="Search..." required>
+
+</form>
+  </p>
 </body>
 </html>
