Changed color of the numbers, added Login and Sign Up links.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         <a href="#">submit</a>
       </li>
     </ul>
+      <ul class="login">
+      <li>
+        <a href="">Login</a>
+      </li>
+      <li>
+        <a href="">Sign Up</a>
+      </li>
+    </ul>
   </nav>
 
     <ol class="content">
