Removed the lorem text and replaced it to have the three parts; title of article, comments and tagline. Changed around some of the headings and classes to make it easier to understand.

--- a/index.html
+++ b/index.html
@@ -42,33 +42,13 @@
   </nav>
 
     <ol class="content">
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
-      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
-      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
-      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
-      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
-      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
-      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
-      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
-      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-      <li>Nullam non lacus fermentum, sodales ligula nec, mollis turpis.</li>
-      <li>Duis blandit, nisl et imperdiet feugiat, diam dui sagittis nibh, non finibus ex nulla ac metus.</li>
+      <li>
+        <div class="middle">
+          <a href="#">I am an Article</a>
+          <p>I am a tagline.</p>
+          <p>Comments</p>
+        </div>
+      </li>
     </ol>
   <p class="nav-end">
     <ul class="nav-end-2">
@@ -104,6 +84,5 @@
                                 Search: <input type="text" placeholder="Search..." required>
 
 </form>
-  </p>
 </body>
 </html>
