--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>JS Bin</title>
   <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
+  <link rel="stylesheet" href="ironnews.css">
 </head>
 <body>
   <nav>
@@ -33,10 +34,10 @@
     </ul>
       <ul class="login">
       <li>
-        <a href="">Login</a>
+        <a href="#">Login</a>
       </li>
       <li>
-        <a href="">Sign Up</a>
+        <a href="#">Sign Up</a>
       </li>
     </ul>
   </nav>
