Final draft of Iron News including the drop down.

--- a/index.html
+++ b/index.html
@@ -32,22 +32,121 @@
         <a href="#">submit</a>
       </li>
     </ul>
+
       <ul class="login">
-      <li>
-        <a href="#">Login</a>
-      </li>
-      <li>
-        <a href="#">Sign Up</a>
-      </li>
+  <li><a href="#">Account</a>
+    <ul>
+      <li><a href="#">Login</a></li>
+      <li><a href="#">Sign Up</a></li>
     </ul>
+  </li>
+</ul>
   </nav>
 
     <ol class="content">
       <li>
         <div class="middle">
-          <a href="#">I am an Article</a>
-          <p>I am a tagline.</p>
-          <p>Comments</p>
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
+        </div>
+      </li>
+            <li>
+        <div class="middle">
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
+          <p>Sed volutpat libero.</p>
+          <p>15 Comments</p>
         </div>
       </li>
     </ol>
