--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>JS Bin</title>
+  <title>Iron News</title>
   <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
-  <link rel="stylesheet" href="ironnews.css">
+  <link rel="stylesheet" href="iron-news.css">
 </head>
 <body>
   <nav>
