Completed Drop Down Menu

--- a/index.html
+++ b/index.html
@@ -13,141 +13,96 @@
       Iron News
     </h1>
     <ul class="nav-items">
-      <li>
-        <a href="#">new</a>
-      </li>
-      <li>
-        <a href="#">comments</a>
-      </li>
-      <li>
-        <a href="#">show</a>
-      </li>
-      <li>
-        <a href="#">ask</a>
-      </li>
-      <li>
-        <a href="#">jobs</a>
-      </li>
-      <li>
-        <a href="#">submit</a>
-      </li>
+      <li><a href="#">new</a></li>
+      <li><a href="#">comments</a></li>
+      <li><a href="#">show</a></li>
+      <li><a href="#">ask</a></li>
+      <li><a href="#">jobs</a></li>
+      <li><a href="#">submit</a></li>
     </ul>
+    </nav>
 
-      <ul class="login">
-  <li><a href="#">Account</a>
-    <ul>
-      <li><a href="#">Login</a></li>
-      <li><a href="#">Sign Up</a></li>
-    </ul>
-  </li>
-</ul>
-  </nav>
+    <div class="dropdown">
+      <ul class="menu">
+        <li class="login"><a href="#">Account</a>
+        <ul class="drop">
+          <li class="sub">Login</li>
+          <li class="sub">Sign Up</li>
+        </ul>
+        </li>
+      </ul>
+    </div>
 
     <ol class="content">
       <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
             <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
             <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
             <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
             <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
             <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
             <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
             <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
             <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
             <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
-      </li>
-            <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
-      </li>
-            <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
-      </li>
-            <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
-      </li>
-            <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
-      </li>
-            <li>
-        <div class="middle">
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.</a>
-          <p>Sed volutpat libero.</p>
-          <p>15 Comments</p>
-        </div>
+        <span class="content2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat libero vel.
+          Sed volutpat libero.
+          <a href="#">15 Comments</a>
+        </span>
       </li>
     </ol>
   <p class="nav-end">
